# WordCounter

./: CMakeLists.txt  README.md
TestDataGeneration/: generate_test.py
include/: chunk_coordinator.hpp  chunk_processor.hpp  file_handle.hpp  file_word.hpp  parser.hpp  temp_file.hpp  word_counter.hpp
src/: chunk_coordinator.cpp  chunk_processor.cpp  file_handle.cpp  main.cpp  parser.cpp  temp_file.cpp  word_counter.cpp
tests/: test_file_handle.cpp  test_main.cpp  test_parser.cpp  test_temp_file.cpp  test_word_counter.cpp
